--- a/style.css
+++ b/style.css
@@ -596,3 +596,12 @@ border-color: #555 transparent transparent transparent;
   overflow:auto;
 }
 
+.lap span{
+  display:inline-block;
+  width:100%;
+  padding:5px 0;
+  font-family:monospace;
+  font-size:16px;
+  color:black;
+  text-decoration:none;
+}
