--- a/style.css
+++ b/style.css
@@ -595,4 +595,13 @@ border-color: #555 transparent transparent transparent;
   text-align:center;
   overflow:auto;
 }
+.lap span{
+  display:inline-block;
+  width:100%;
+  padding:5px 0;
+  font-family:monospace;
+  font-size:16px;
+  color:black;
+  text-decoration:none;
+}
 
