--- a/style.css
+++ b/style.css
@@ -464,7 +464,15 @@ cursor: pointer;
 border-radius: 5px;
 border:none;
 }
-
+input[type=range].slider::-webkit-slider-thumb {
+  border: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7.5px;
+  }
 
 
 input[type=range]#r::-webkit-slider-runnable-track,  input[type=range]#r::-webkit-slider-thumb{
