--- a/style.css
+++ b/style.css
@@ -567,6 +567,18 @@ border-color: #555 transparent transparent transparent;
   
 }
 
+.btns{
+  width:260px;
+  margin:auto;
+  margin-bottom:20px;
+}
+.lap{
+  width:80%;
+  margin:auto;
+  box-shadow:1px 1px 5px -1px #009696;
+  text-align:center;
+  overflow:auto;
+}
 
 
 
